@@ -503,8 +503,8 @@ class Methods {
       std::shared_ptr<LogicalCollection> collection,
       std::shared_ptr<const std::vector<std::string>> const& followers,
       OperationOptions const& options, VPackSlice value, TRI_voc_document_operation_e operation,
-      std::shared_ptr<velocypack::Buffer<uint8_t>> const& ops,
-      std::unordered_set<size_t> const& excludePositions,
+      std::shared_ptr<velocypack::Buffer<uint8_t>> ops,
+      std::unordered_set<size_t> excludePositions,
       std::unique_ptr<IntermediateCommitsHandler> intermediateCommitsDelayer);
 
   /// @brief transaction hints
