@@ -1,6 +1,11 @@
 devel
 -----
 
+* Defer intermediate commits in the middle of a multi-document (array)
+  operation. This is to ensure that the RocksDB key locks for all participating
+  document keys are still held while the operations are replicating via the
+  synchronous replication.
+
 * BTS-624: The `move-calculations-up` optimization rule is now also applied to
   subqueries, when they don't have dependencies on the outer nodes, don't have
   modification nodes and don't read their own writes. This fixed the execution
